(doc) : added new